--- a/src/components/layout/Container.module.css
+++ b/src/components/layout/Container.module.css
@@ -2,7 +2,7 @@
   width: 1200px;
   margin: 0 auto;
   display: flex;
-  text-align: center;
+  /* text-align: center; */
   flex-wrap: wrap;
   justify-content: space-between;
 }
